// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container DeleteResource should render with proper resourceInfo params 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Container(DeleteResource)
    cancel-action="dialog:delete:cancel"
    header="My header title"
    params={
        Object {
            "id": "myResourceID",
          }
    }
    resourceType="myResourceType"
    uri="/myEndpoint"
    validate-action="dialog:delete:validate"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "cancelAction": Object {
        "actionCreator": "deleteResource:cancel",
        "id": "dialog:delete:cancel",
        "label": "No",
        "model": Object {
          "resourceInfo": Object {
            "found": true,
            "id": "myResourceID",
            "label": "myLabel",
            "resourceType": "myResourceType",
            "uri": "/myEndpoint",
          },
        },
        "onClick": [Function],
      },
      "children": <div>
        myLabel
</div>,
      "header": "My header title",
      "show": true,
      "validateAction": Object {
        "actionCreator": "deleteResource:validate",
        "bsStyle": "danger",
        "id": "dialog:delete:validate",
        "label": "Yes",
        "model": Object {
          "resourceInfo": Object {
            "found": true,
            "id": "myResourceID",
            "label": "myLabel",
            "resourceType": "myResourceType",
            "uri": "/myEndpoint",
          },
        },
        "onClick": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "myLabel",
      },
      "ref": null,
      "rendered": "myLabel",
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "cancelAction": Object {
          "actionCreator": "deleteResource:cancel",
          "id": "dialog:delete:cancel",
          "label": "No",
          "model": Object {
            "resourceInfo": Object {
              "found": true,
              "id": "myResourceID",
              "label": "myLabel",
              "resourceType": "myResourceType",
              "uri": "/myEndpoint",
            },
          },
          "onClick": [Function],
        },
        "children": <div>
          myLabel
</div>,
        "header": "My header title",
        "show": true,
        "validateAction": Object {
          "actionCreator": "deleteResource:validate",
          "bsStyle": "danger",
          "id": "dialog:delete:validate",
          "label": "Yes",
          "model": Object {
            "resourceInfo": Object {
              "found": true,
              "id": "myResourceID",
              "label": "myLabel",
              "resourceType": "myResourceType",
              "uri": "/myEndpoint",
            },
          },
          "onClick": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "myLabel",
        },
        "ref": null,
        "rendered": "myLabel",
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "context": Object {
      "store": Object {
        "getState": [Function],
      },
    },
  },
}
`;

exports[`Container DeleteResource should render with wrong resourceInfo params 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Container(DeleteResource)
    cancel-action="dialog:delete:cancel"
    header="My header title"
    params={
        Object {
            "id": "myResourceID",
          }
    }
    resourceType="unknownResourceType"
    uri="/myEndpoint"
    validate-action="dialog:delete:validate"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "cancelAction": Object {
        "actionCreator": "deleteResource:cancel",
        "id": "dialog:delete:cancel",
        "label": "No",
        "model": Object {
          "resourceInfo": Object {
            "found": false,
            "id": "myResourceID",
            "label": "",
            "resourceType": "unknownResourceType",
            "uri": "/myEndpoint",
          },
        },
        "onClick": [Function],
      },
      "children": <div />,
      "header": "My header title",
      "show": true,
      "validateAction": Object {
        "actionCreator": "deleteResource:validate",
        "bsStyle": "danger",
        "id": "dialog:delete:validate",
        "label": "Yes",
        "model": Object {
          "resourceInfo": Object {
            "found": false,
            "id": "myResourceID",
            "label": "",
            "resourceType": "unknownResourceType",
            "uri": "/myEndpoint",
          },
        },
        "onClick": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "",
      },
      "ref": null,
      "rendered": "",
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "cancelAction": Object {
          "actionCreator": "deleteResource:cancel",
          "id": "dialog:delete:cancel",
          "label": "No",
          "model": Object {
            "resourceInfo": Object {
              "found": false,
              "id": "myResourceID",
              "label": "",
              "resourceType": "unknownResourceType",
              "uri": "/myEndpoint",
            },
          },
          "onClick": [Function],
        },
        "children": <div />,
        "header": "My header title",
        "show": true,
        "validateAction": Object {
          "actionCreator": "deleteResource:validate",
          "bsStyle": "danger",
          "id": "dialog:delete:validate",
          "label": "Yes",
          "model": Object {
            "resourceInfo": Object {
              "found": false,
              "id": "myResourceID",
              "label": "",
              "resourceType": "unknownResourceType",
              "uri": "/myEndpoint",
            },
          },
          "onClick": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "context": Object {
      "store": Object {
        "getState": [Function],
      },
    },
  },
}
`;
